# tee-engine

./: .gitignore  Android.mk  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  emu.qbs  emulator.qbs  groups  project.config
autom4te.cache/: output.0  traces.0  traces.1  traces.2
common/: Android.mk  Makefile.am  Makefile.in  Makemodule.am  android_defines.h  com_protocol.c  common.qbs  conf_parser.c  elf_read.c  epoll_wrapper.c  h_table.c  socket_help.c  tee_list.c  tee_logging.c  tee_seccomp.c  trusted_app_properties.c
core/: Makemodule.am  args.c  args.h  conf_parser.c  conf_parser.h  config.conf  context_child.c  core.qbs  core_extern_resources.h  dynamic_loader.c  epoll_wrapper.c  epoll_wrapper.h  ini.c  io_thread.c  io_thread.h  main.c  main_shared_var.h  process_definition.h  process_manager.c  process_manager.h  session_child.c  session_child.h  tee_list.c  tee_list.h
include/: com_protocol.h  conf_parser.h  core_control_resources.h  elf_read.h  epoll_wrapper.h  general_data_types.h  h_table.h  intermediate_data_types.h  socket_help.h  subprocess.h  ta_exit_states.h  tee_internal_api.h  tee_list.h  tee_logging.h  tee_seccomp.h  tee_shared_data_types.h  tee_tui_api.h  tee_tui_data_types.h  trusted_app_properties.h
internal_api/: Android.mk  Makefile.am  Makefile.in  Makemodule.am  callbacks.c  callbacks.h  crypto_api.c  crypto_api.h  data_types.h  internal.qbs  new_tee_crypto_api.c  new_tee_storage_api.c  openssl_1_0_2_beta_rsa_oaep.c  openssl_1_0_2_beta_rsa_oaep.h  opentee_internal_api.c  opentee_internal_api.h  opentee_storage_common.c  opentee_storage_common.h  storage_data_key_api.c  storage_data_key_api.h  storage_key_apis_external_funcs.c  storage_key_apis_external_funcs.h  storage_test.qbs  tee_bigint.c  tee_bigint.h  tee_cancellation.c  tee_cancellation.h  tee_crypto_api.c  tee_crypto_api.h  tee_data_types.h  tee_internal_client_api.c  tee_internal_client_api.h  tee_internal_data_types.h  tee_memory.c  tee_memory.h  tee_object_handle.h  tee_panic.c  tee_panic.h  tee_storage_api.c  tee_storage_api.h  (+7 more)
internal_api/crypto/: crypto_ae.c  crypto_ae.h  crypto_asym.c  crypto_asym.h  crypto_cipher.c  crypto_cipher.h  crypto_digest.c  crypto_digest.h  crypto_generate_random.c  crypto_key_derive.c  crypto_mac.c  crypto_mac.h  crypto_utils.c  crypto_utils.h  operation_handle.h  tee_crypto_api.c
internal_api/storage/: data_stream_api.c  enumerator_api.c  object_handle.h  persistent_object_api.c  storage_utils.c  storage_utils.h  tee_storage_api.c  transient_object_api.c
internal_api/time_api/: time_api.c  time_api.h  time_data_types.h
launcher/: Android.mk  Makefile.am  Makefile.in  Makemodule.am  androidmk  dynamic_loader.c  dynamic_loader.h  internal_api_callbacks.h  launcher.qbs  launcher_mainloop.c  ta_control_params.h  ta_ctl_resources.h  ta_extern_resources.h  ta_internal_api_thread.c  ta_internal_api_thread.h  ta_internal_thread.c  ta_internal_thread.h  ta_internal_thread_tui.c  ta_internal_thread_tui.h  ta_io_thread.c  ta_io_thread.h  ta_process.c  ta_process.h  ta_signal_handler.c  ta_signal_handler.h  utils.c  utils.h
main/: Makefile.am  Makefile.in
manager/: Android.mk  Makefile.am  Makefile.in  Makemodule.am  androidmk  context_child.c  context_child.h  elf_reader.c  elf_reader.h  epoll_wrapper.c  ext_storage_stream_api.h  ext_storage_stream_api_posix.c  extern_resources.h  io_thread.c  io_thread.h  io_thread_tui.c  io_thread_tui.h  logic_thread.c  logic_thread.h  logic_thread_tui.c  logic_thread_tui.h  mainloop.c  manager.qbs  manager_extern_resources.h  manager_io_thread.c  manager_io_thread.h  manager_logic_thread.c  manager_logic_thread.h  manager_shared_variables.h  opentee_manager_storage_api.c  opentee_manager_storage_api.h  process_manager.c  shm_mem.c  shm_mem.h  storage_key_apis_external_funcs.c  storage_key_apis_external_funcs.h  ta_dir_watch.c  ta_dir_watch.h  tee_ta_propertie.h  tee_ta_properties.h  (+3 more)
opentee-main/: Android.mk  Makemodule.am  args.c  args.h  conf_parser.c  ini.c  ini.h  main.c  opentee.qbs
scripts/: checkpatch.pl  whitelist.txt
tests/: Makefile.am  Makefile.in  bigint_ffi.py  bigint_test.py  crypto_test.c  crypto_test.qbs  storage_test.c  storage_test.qbs
