SUBDIRS = .
bin_PROGRAMS = storage_test
storage_test_SOURCES = storage_test.c
storage_test_LDFLAGS = -lssl
storage_test_LDADD = ../internal_api/libInternalApi.la

bin_PROGRAMS = crypto_test
crypto_test_SOURCES = crypto_test.c
crypto_test_LDFLAGS = -lssl
crypto_test_LDADD = ../internal_api/libInternalApi.la
